feat: add solar panel and terminal workflow updates